--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   shared_preferences: ^2.0.17
   platform_device_id: ^1.0.1
+  jiffy: ^6.1.0
 
 dev_dependencies:
   flutter_test:
