- xong flow request ticket

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^2.0.17
   platform_device_id: ^1.0.1
   jiffy: ^6.1.0
+  dropdown_button2: ^2.0.0
 
 dev_dependencies:
   flutter_test:
