--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.unihome">
+    <user-permission android:name="android.permission.CAMERA"/>
+    <user-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <user-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
    <application
         android:label="unihome"
         android:name="${applicationName}"
@@ -7,6 +10,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
