--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,14 @@ dependencies:
   flutter_easyloading: ^3.0.5
   shared_preferences: ^2.0.17
   platform_device_id: ^1.0.1
-  jiffy: ^6.1.0
+  jiffy: ^4.1.0
   dropdown_button2: ^2.0.0
+  flutter_staggered_grid_view: ^0.6.2
+  expandable: ^5.0.1
+  buttons_tabbar: ^1.3.6
+  image_picker: ^0.8.7
+  intl: ^0.17.0
+  flutter_format_money_vietnam: ^0.0.2
 
 dev_dependencies:
   flutter_test:
@@ -36,9 +42,9 @@ flutter_icons:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/
     - assets/icons/
     - assets/logos/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -51,11 +57,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: SF Pro Display 
+      fonts:
+        - asset: assets/fonts/SFProDisplay-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/SFProDisplay-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/SFProDisplay-Semibold.ttf
+          weight: 700
+        - asset: assets/fonts/SFProDisplay-Bold.ttf
+          weight: 900  
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
