- update invoice due - update call - update change password

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,5 +53,9 @@
 	<string> Need to upload image</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string> Need to upload image</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+  		<string>tel</string>
+	</array>
 </dict>
 </plist>
