--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   intl: ^0.17.0
   flutter_format_money_vietnam: ^0.0.2
   cached_network_image: ^3.2.3
+  flutter_phone_direct_caller: ^2.1.1
 
 dev_dependencies:
   flutter_test:
