--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,12 +2,12 @@ name: unihome
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.1 <3.0.0'
+  sdk: ">=2.19.1 <3.0.0"
 
 dependencies:
   flutter:
@@ -29,11 +29,13 @@ dependencies:
   flutter_phone_direct_caller: ^2.1.1
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   flutter_launcher_icons: "^0.11.0"
-  
+
 flutter_icons:
   android: true
   ios: true
@@ -60,7 +62,7 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: SF Pro Display 
+    - family: SF Pro Display
       fonts:
         - asset: assets/fonts/SFProDisplay-Regular.ttf
           weight: 400
@@ -69,7 +71,7 @@ flutter:
         - asset: assets/fonts/SFProDisplay-Semibold.ttf
           weight: 700
         - asset: assets/fonts/SFProDisplay-Bold.ttf
-          weight: 900  
+          weight: 900
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
